Bug 77802 - [IVB,HSW,SNB,BYT,BDW] the second monitor can't normally play video by "mplayer -vo xv:adaptor=1 "
Summary: [IVB,HSW,SNB,BYT,BDW] the second monitor can't normally play video by "mplaye...
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-23 09:12 UTC by liulei
Modified: 2014-07-15 03:37 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
screen of second monitor (2.35 MB, text/plain)
2014-04-23 09:12 UTC, liulei
no flags Details
dmesg (54.17 KB, text/plain)
2014-04-23 09:13 UTC, liulei
no flags Details

Description liulei 2014-04-23 09:12:56 UTC
Created attachment 97815 [details]
screen of second monitor

Booting with either two monitors and run the command"mplayer -vo xv:adaptor=1 *", 
the video shows well on one monitor, but only shows the blue screen on the other one."mplayer -vo xv:adaptor=0 *" can work well on both two monitors. This is first time for we to test these two commands with two monitors(only with one monitor before).


Steps:
---------------------------
1. xinit &
2. mplayer -vo xv:adaptor=1 /home/testframework/MPEG-2.mpeg
Comment 1 liulei 2014-04-23 09:13:18 UTC
Created attachment 97816 [details]
dmesg
Comment 2 Chris Wilson 2014-04-23 09:18:56 UTC
Yeah, it has never worked in clone mode (or across the boundary) as the original overlay was restricted to a single pipe. However, we can fix up sprites to work.
Comment 3 Chris Wilson 2014-04-23 10:55:29 UTC
commit 5fbbfd4dd35c5e5381897b7e5d4c16c1f182ef2b
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Apr 23 11:34:06 2014 +0100

    sna/video: Show sprites across all outputs
    
    If an overlay video (using the sprite interface) is visible on multiple
    outputs, we have to create and show a sprite for each.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=77802
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 4 liulei 2014-04-24 03:12:18 UTC
(In reply to comment #3)
> commit 5fbbfd4dd35c5e5381897b7e5d4c16c1f182ef2b
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Wed Apr 23 11:34:06 2014 +0100
> 
>     sna/video: Show sprites across all outputs
>     
>     If an overlay video (using the sprite interface) is visible on multiple
>     outputs, we have to create and show a sprite for each.
>     
>     Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=77802
>     Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

which branch do you mean? I can't find  commit you said,until now. I need more information to verify it.
Comment 5 Chris Wilson 2014-04-24 05:41:34 UTC
xf86-video-intel
Comment 6 liulei 2014-04-24 10:12:30 UTC
it works well.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.