sna/video: Show sprites across all outputs

If an overlay video (using the sprite interface) is visible on multiple
outputs, we have to create and show a sprite for each.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=77802
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>